  make adding profile entries via modules a little cleaner and easier. Added
  closure to determine, based on current signature count and on whether any
  CAPTCHA solutions are enabled, whether to honour API lookups (ensures
  compatibility with modules written with future v3 code in mind).

- [2021.03.31; Maikuolan]: Adjusted the IP test page as to allow testing user
  agents without the need to also specify an IP address.

=== Version/Release 1.18.0 ===
MINOR RELEASE.

- [2020.10.08; Maikuolan]: Added some 'copy to clipboard' buttons to the
  homepage and statistics page.

- [2020.10.09; Maikuolan]: Aesthetic patch + added a new theme.

- [2020.10.09; NEW FEATURE; Maikuolan]: Added a range intersector to the
  front-end (along with the IP aggregator and the range subtractor, the range
  intersector provides an additional tool for managing sets of CIDRs, in this
  case, producing an intersect of two given sets of CIDRs). Also added the
  ability to the range subtractor to preserve section tags and some other kinds
  of peripheral data (the range intersector also has this ability).

- [2020.10.10; Maikuolan]: Added the ability to edit existing auxiliary rules
  to the auxiliary rules page, to add new conditions, new webhooks, to be able
  to rearrange the execution order for all auxiliary rules at the same time,
  and improved the design of the page.

- [2020.10.10; Bug-fix; Maikuolan]: MajorVersionNotice not declared early
  enough in frontend.php, causing an undefined index notice to occur; Fixed.

- [2020.10.30; Maikuolan]: Redesigned the login pips and refactored some CSS.

- [2020.11.12; Bug-fix; Maikuolan]: Fixed potential undefined index error
  caused by the front-end updates page repair mechanism.

- [2020.11.13; Maikuolan]: Expanded the front-end range tables page to be able
  to distinguish between ignored and non-ignored signatures.

- [2020.11.27; Maikuolan]: Ditched external test frameworks in favour of GitHub