@@ -3580,6 +3580,14 @@ elseif ($CIDRAM['QueryVars']['cidram-page'] === 'ip-tracking' && $CIDRAM['FE']['
             }
             $CIDRAM['ThisTracking']['Status'] .= ' – ' . $CIDRAM['NumberFormatter']->format($CIDRAM['ThisTrackingArr']['Count'], 0);
             $CIDRAM['ThisTracking']['TrackingFilter'] = $CIDRAM['FE']['TrackingFilter'];
+            if (!empty($CIDRAM['FE']['CachedLogsLink']) && strpos($CIDRAM['FE']['CachedLogsLink'], 'logfile=') !== false) {
+                $CIDRAM['ThisTracking']['IPAddr'] = sprintf(
+                    '<a href="%s&search=%s">%s</a>',
+                    $CIDRAM['FE']['CachedLogsLink'],
+                    str_replace('=', '_', base64_encode($CIDRAM['ThisTracking']['IPAddr'])),
+                    $CIDRAM['ThisTracking']['IPAddr']
+                );
+            }
             $CIDRAM['FE']['TrackingData'] .= $CIDRAM['ParseVars'](
                 $CIDRAM['L10N']->Data + $CIDRAM['ThisTracking'],
                 $CIDRAM['FE']['TrackingRow']
