@@ -22,7 +22,9 @@ Detailed version release guidelines for CIDRAM can be found at:
   compatibility with modules written with future v3 code in mind).
 
 - [2021.03.31; Maikuolan]: Adjusted the IP test page as to allow testing user
-  agents without the need to also specify an IP address.
+  agents without the need to also specify an IP address. Added links to the
+  entries displayed on the IP tracking page to immediately search for those
+  particular entries in the logs.
 
 === Version/Release 1.18.0 ===
 MINOR RELEASE.
